--- a/_data/itgm7_infopartners.yml
+++ b/_data/itgm7_infopartners.yml
@@ -14,6 +14,11 @@
   desc:
   logo: img/infopartners/kechinov.png
 
+- title: RubyNoName
+  link: http://rubynoname.ru/
+  desc: 
+  logo: img/infopartners/rubynoname.png
+
 #- title: DataArt
 #  link: http://www.dataart.ru/
 #  desc:
