(ITGM#7) +Первый городской бизнес-инкубатор

--- a/_data/itgm7_infopartners.yml
+++ b/_data/itgm7_infopartners.yml
@@ -19,6 +19,11 @@
   desc: 
   logo: img/infopartners/rubynoname.png
 
+- title: Первый городской бизнес-инкубатор
+  link: http://start-business.ru/
+  desc:
+  logo: img/infopartners/first-bisnes-incubator.jpg
+
 #- title: DataArt
 #  link: http://www.dataart.ru/
 #  desc:
