(ITGM#7) +it-sobytie

--- a/_data/itgm7_infopartners.yml
+++ b/_data/itgm7_infopartners.yml
@@ -19,6 +19,11 @@
   desc:
   logo: img/infopartners/first-bisnes-incubator.jpg
 
+- title: Айти-событие.рф
+  link: http://it-sobytie.ru/
+  desc:
+  logo: img/infopartners/itsob_logo.png
+
 - title: RubyNoName
   link: http://rubynoname.ru/
   desc: 
