(ITGM#7) ОПТИМИЗАЦИЯ ПРОИЗВОДИТЕЛЬНОСТИ: уменьшил размеры всех изображений с эвентов предыдущих

--- a/_data/itgm7_photos.yml
+++ b/_data/itgm7_photos.yml
@@ -1,14 +1,14 @@
-- photo: img/events/past/thumb1.png
-- photo: img/events/past/thumb2.png
-- photo: img/events/past/thumb3.png
-- photo: img/events/past/thumb4.png
-- photo: img/events/past/thumb5.png
-- photo: img/events/past/thumb6.png
-- photo: img/events/past/thumb7.png
-- photo: img/events/past/thumb8.png
-- photo: img/events/past/thumb9.png
-- photo: img/events/past/thumb10.png
-- photo: img/events/past/thumb11.png
-- photo: img/events/past/thumb12.png
-- photo: img/events/past/thumb13.png
-- photo: img/events/past/thumb14.png
+- photo: img/events/past/thumb1.jpg
+- photo: img/events/past/thumb2.jpg
+- photo: img/events/past/thumb3.jpg
+- photo: img/events/past/thumb4.jpg
+- photo: img/events/past/thumb5.jpg
+- photo: img/events/past/thumb6.jpg
+- photo: img/events/past/thumb7.jpg
+- photo: img/events/past/thumb8.jpg
+- photo: img/events/past/thumb9.jpg
+- photo: img/events/past/thumb10.jpg
+- photo: img/events/past/thumb11.jpg
+- photo: img/events/past/thumb12.jpg
+- photo: img/events/past/thumb13.jpg
+- photo: img/events/past/thumb14.jpg
