--- a/_data/itgm7_infopartners.yml
+++ b/_data/itgm7_infopartners.yml
@@ -1,3 +1,8 @@
+- title: DataArt компания - это люди!
+  link: http://dataart.ru/
+  desc:
+  logo: img/infopartners/dataArt_logo.png
+
 - title: ProfsoUX
   link: http://profsoux.ru/
   desc:
