--- a/_data/itgm7_infopartners.yml
+++ b/_data/itgm7_infopartners.yml
@@ -8,6 +8,11 @@
   desc:
   logo: img/infopartners/loftBlog_logo.png
 
+- title: Портал spbIT.ru
+  link: http://spbit.ru/
+  desc:
+  logo: img/infopartners/spbit_logo.jpg
+
 - title: ProfsoUX
   link: http://profsoux.ru/
   desc:
