--- a/_data/itgm7_sponsors.yml
+++ b/_data/itgm7_sponsors.yml
@@ -1,3 +1,9 @@
+- title: Selectel
+  link: https://selectel.ru/
+  desc:
+  level: Бронзовый партнер
+  logo: img/partners/selectel.png
+
 - title: DINO Systems
   link: http://www.dins.ru/
   desc:
