--- a/_data/itgm8_programms.yml
+++ b/_data/itgm8_programms.yml
@@ -1,39 +1,103 @@
 - id: Program1
-  title: Регистрация участников и приветственный кофе
+  title: Регистрация участников
   text: Хороший день начинается с чашечки кофе (или чая). Не упустите возможность в непринужденной обстановке познакомиться с новыми людьми.
-  time: "11:00 - 12:00"
-  duration: 1h
+  time: "11:00 - 11:40"
+  duration: 1 час
   place: холл
   logo: img/programs/clock_11_00.png
 
 - id: Program2
-  title: Ярмарка сообществ и нетворкинг
-  text: На каждом островке будут присутствовать активисты сообществ, которые расскажут Вам о сообществе, регулярных встречах, он-лайн площадках для общения и программе на сегодня.
-  time: "12:00 - 12:45"
-  duration: 45mins
-  place: вся доступная территория
+  title: Официальное открытие мероприятия
+  text: Краткий рассказ о мероприятии, благодарности партнерам
+  time: "11:40 - 12:00"
+  duration: 20 минут
+  place: главный зал
   logo: img/programs/clock_12_00.png
 
 - id: Program3
-  title: Официальное открытие мероприятия
-  text: Организаторы мероприятия поблагодарят партнеров, кратко расскажут о мероприятии, его целях и условиях конкурса, в котором будет участвовать каждый из вас.
-  time: "12:45 - 13:00"
-  duration: 15mins
-  place: большой зал
-  logo: img/programs/clock_12_45.png
+  title: Блиц-доклады в 3 потока (1-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "12:00 - 12:30"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
 
 - id: Program4
-  title: Общение на островках сообществ
+  title: Блиц-доклады в 3 потока (2-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "12:30 - 13:00"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program5
+  title: Блиц-доклады в 3 потока (3-я секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "13:00 - 13:30"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program6
+  title: Блиц-доклады в 3 потока (4-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "13:30 - 14:00"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program7
+  title: Блиц-доклады в 3 потока (5-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "14:00 - 14:30"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program8
+  title: Блиц-доклады в 3 потока (6-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "14:30 - 15:00"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program9
+  title: Блиц-доклады в 3 потока (7-ая секция) 
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "15:00 - 15:30"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program10
+  title: Перерыв и кофе-брейк
+  text: Время для свободного общения и смены формата мероприятия
+  time: "15:30 - 16:00"
+  duration: 30 минут
+  place: все помещения
+  logo: img/programs/clock_12_45.png
+
+- id: Program11
+  title: Программа на островках (Слот 1)
   text: Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.
-  time: "13:00 - 17:00"
-  duration: 4h (4x45mins)
+  time: "16:00 - 17:00"
+  duration: 1 час
   place: островки сообществ
   logo: img/programs/clock_13_00.png
 
-- id: Program5
-  title: Закрытие мероприятия
-  text: Завершим мы мероприятие подведением итогов.
+- id: Program12
+  title: Программа на островках (Слот 2)
+  text: Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.
   time: "17:00 - 18:00"
-  duration: 1h
-  place: большой зал
+  duration: 1 час
+  place: островки сообществ
+  logo: img/programs/clock_13_00.png
+
+- id: Program13
+  title: Официальное закрытие мероприятия
+  text: Завершим мы мероприятие небольшим музыкальным концертом и награждением лучших докладчиков
+  time: "18:00 - 18:30"
+  duration: 30 минут
+  place: холл
   logo: img/programs/clock_17_00.png
