--- a/_data/itgm8_communities.yml
+++ b/_data/itgm8_communities.yml
@@ -66,6 +66,10 @@
   id: 18
   link: http://www.meetup.com/Embedded-Systems-Meetup-St-Petersburg/
 
+- title: SPb R User Group
+  id: 19
+  link: https://vk.com/spbrug
+
 # - title: IT talk
 #   id: 3
 #   link: http://it-talk.dataart.ru/
