--- a/_data/itgm8_sponsors.yml
+++ b/_data/itgm8_sponsors.yml
@@ -17,11 +17,11 @@
   level: Серебряный партнер
   logo: img/partners/semrush-01.png
 
-- title: DINO Systems
-  link: http://www.dins.ru/
-  desc:
-  level: Бронзовый партнер
-  logo: img/partners/dins-02.png
+# - title: DINO Systems
+#   link: http://www.dins.ru/
+#   desc:
+#   level: Бронзовый партнер
+#   logo: img/partners/dins-02.png
 
 # - title: Петер Сервис
 #   link: http://www.billing.ru/
