--- a/_data/itgm9_programms.yml
+++ b/_data/itgm9_programms.yml
@@ -1,7 +1,7 @@
 - id: Program1
   title: Регистрация участников
   text: Хороший день начинается с чашечки кофе (или чая). Не упустите возможность в непринужденной обстановке познакомиться с новыми людьми.
-  time: "11:00 - 11:40"
+  time: "10:30 - 11:30"
   duration: 1 час
   place: холл
   logo: img/programs/clock_11_00.png
@@ -9,95 +9,87 @@
 - id: Program2
   title: Официальное открытие мероприятия
   text: Краткий рассказ о мероприятии, благодарности партнерам
-  time: "11:40 - 12:00"
+  time: "11:15 - 11:30"
   duration: 20 минут
   place: главный зал
   logo: img/programs/clock_12_00.png
 
 - id: Program3
-  title: Блиц-доклады в 4 потока (1-ая секция) 
+  title: Блиц-доклады в 4 потока (1-ая секция)
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "11:30 - 12:00"
+  duration: 20 минут + 10 минут
+  place: три зала
+  logo: img/programs/clock_12_00.png
+
+- id: Program4
+  title: Блиц-доклады в 4 потока (2-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "12:00 - 12:30"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program4
-  title: Блиц-доклады в 4 потока (2-ая секция) 
+- id: Program5
+  title: Блиц-доклады в 4 потока (3-я секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "12:30 - 13:00"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program5
-  title: Блиц-доклады в 4 потока (3-я секция) 
-  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+- id: Program6
+  title: Обед
+  text: Обеденный перерыв
   time: "13:00 - 13:30"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program6
-  title: Блиц-доклады в 4 потока (4-ая секция) 
+- id: Program7
+  title: Блиц-доклады в 4 потока (5-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "13:30 - 14:00"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program7
-  title: Блиц-доклады в 4 потока (5-ая секция) 
+- id: Program8
+  title: Блиц-доклады в 4 потока (6-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "14:00 - 14:30"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program8
-  title: Блиц-доклады в 4 потока (6-ая секция) 
+- id: Program9
+  title: Блиц-доклады в 4 потока (7-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "14:30 - 15:00"
   duration: 20 минут + 10 минут
   place: три зала
   logo: img/programs/clock_12_00.png
 
-- id: Program9
-  title: Блиц-доклады в 4 потока (7-ая секция) 
-  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
-  time: "15:00 - 15:30"
-  duration: 20 минут + 10 минут
-  place: три зала
-  logo: img/programs/clock_12_00.png
-
 - id: Program10
-  title: Перерыв и кофе-брейк
-  text: Время для свободного общения и смены формата мероприятия
-  time: "15:30 - 16:00"
+  title: Развлекательная программа
+  text: Своя Игра, Гонки по печати на клавиатуре, подведение итогов хакатона
+  time: "15:00 - 17:00"
   duration: 30 минут
   place: все помещения
   logo: img/programs/clock_12_45.png
 
 - id: Program11
-  title: Программа на островках (Слот 1)
-  text: Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.
-  time: "16:00 - 17:00"
+  title: Закрытие
+  text: Официальное закрытие мероприятия
+  time: "17:00 - 17:30"
   duration: 1 час
-  place: островки сообществ
+  place: главный зал
   logo: img/programs/clock_13_00.png
 
 - id: Program12
-  title: Программа на островках (Слот 2)
-  text: Все общение на островках будет разбито на сорокапятиминутные (45 мин.) временные секции (13.00-13.45, 14.00-14.45 и т.д.) с пятнадцатиминутными (15 мин.) перерывами между ними.
-  time: "17:00 - 18:00"
-  duration: 1 час
-  place: островки сообществ
+  title: Хакатон
+  text: Уточняется
+  time: "11:30 - 15:00"
+  duration: 3 часа 30 минут
+  place: главный зал
   logo: img/programs/clock_13_00.png
-
-- id: Program13
-  title: Официальное закрытие мероприятия
-  text: Завершим мы мероприятие небольшим музыкальным концертом и награждением лучших докладчиков
-  time: "18:00 - 18:30"
-  duration: 30 минут
-  place: холл
-  logo: img/programs/clock_17_00.png
