--- a/_data/itgm_list.yml
+++ b/_data/itgm_list.yml
@@ -1,3 +1,5 @@
+- name: "itgm#8"
+  link: "https://vk.com/album-71691819_234767500"
 - name: "itgm#7"
   link: "https://vk.com/album-71691819_230719173"
 - name: "itgm#6"
