--- a/_data/itgm9_programms.yml
+++ b/_data/itgm9_programms.yml
@@ -10,7 +10,7 @@
   title: Официальное открытие мероприятия
   text: Краткий рассказ о мероприятии, благодарности партнерам
   time: "11:15 - 11:30"
-  duration: 20 минут
+  duration: 15 минут
   place: главный зал
   logo: img/programs/clock_12_00.png
 
@@ -19,7 +19,7 @@
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "11:30 - 12:00"
   duration: 20 минут + 10 минут
-  place: три зала
+  place: четыре зала
   logo: img/programs/clock_12_00.png
 
 - id: Program4
@@ -27,7 +27,7 @@
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "12:00 - 12:30"
   duration: 20 минут + 10 минут
-  place: три зала
+  place: четыре зала
   logo: img/programs/clock_12_00.png
 
 - id: Program5
@@ -35,61 +35,61 @@
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "12:30 - 13:00"
   duration: 20 минут + 10 минут
-  place: три зала
+  place: четыре зала
   logo: img/programs/clock_12_00.png
 
 - id: Program6
   title: Обед
   text: Обеденный перерыв
   time: "13:00 - 13:30"
-  duration: 20 минут + 10 минут
-  place: три зала
-  logo: img/programs/clock_12_00.png
+  duration: 30 минут
+  place: фуд-корт
+  logo: img/programs/clock_13_00.png
 
 - id: Program7
   title: Блиц-доклады в 4 потока (4-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "13:30 - 14:00"
   duration: 20 минут + 10 минут
-  place: три зала
-  logo: img/programs/clock_12_00.png
+  place: четыре зала
+  logo: img/programs/clock_13_00.png
 
 - id: Program8
   title: Блиц-доклады в 4 потока (5-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "14:00 - 14:30"
   duration: 20 минут + 10 минут
-  place: три зала
-  logo: img/programs/clock_12_00.png
+  place: четыре зала
+  logo: img/programs/clock_13_00.png
 
 - id: Program9
   title: Блиц-доклады в 4 потока (6-ая секция)
   text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
   time: "14:30 - 15:00"
   duration: 20 минут + 10 минут
-  place: три зала
-  logo: img/programs/clock_12_00.png
+  place: четыре зала
+  logo: img/programs/clock_13_00.png
 
 - id: Program10
   title: Развлекательная программа
   text: Своя Игра, Гонки по печати на клавиатуре, подведение итогов хакатона
   time: "15:00 - 17:00"
-  duration: 30 минут
+  duration: 2 часа
   place: все помещения
-  logo: img/programs/clock_12_45.png
+  logo: img/programs/clock_17_00.png
 
 - id: Program11
   title: Закрытие
   text: Официальное закрытие мероприятия
   time: "17:00 - 17:30"
-  duration: 1 час
+  duration: 30 минут
   place: главный зал
-  logo: img/programs/clock_13_00.png
+  logo: img/programs/clock_17_00.png
 
 - id: Program12
   title: Хакатон
   text: Уточняется
   time: "11:30 - 15:00"
-  duration: 3 часа 30 минут
+  duration: 1 час
   place: главный зал
   logo: img/programs/clock_13_00.png
