fix partners & link for embedded

--- a/_data/itgm9_communities.yml
+++ b/_data/itgm9_communities.yml
@@ -64,7 +64,7 @@
 
 - title: Embedded Systems
   id: 18
-  link: http://www.meetup.com/Embedded-Systems-Meetup-St-Petersburg/
+  link: http://www.embedded.group
 
 - title: SPb R User Group
   id: 19
