--- a/_data/itgm9_sponsors.yml
+++ b/_data/itgm9_sponsors.yml
@@ -5,11 +5,17 @@
 #   logo: img/partners/epam-01.png
 #
 #
-- title: Selectel
-  link: https://selectel.ru/
+# - title: Selectel
+#   link: https://selectel.ru/
+#   desc:
+#   level: Золотой партнер
+#   logo: img/partners/selectel_new.png
+
+- title: Петер Сервис
+  link: http://www.billing.ru/
   desc:
   level: Золотой партнер
-  logo: img/partners/selectel_new.png
+  logo: img/partners/peterservice-01.png
 
 - title: SEMRush
   link: http://www.semrush.com/
@@ -17,17 +23,11 @@
   level: Серебряный партнер
   logo: img/partners/semrush-01.png
 
-- title: DINO Systems
-  link: http://www.dins.ru/
-  desc:
-  level: Бронзовый партнер
-  logo: img/partners/dins-02.png
-
-- title: Петер Сервис
-  link: http://www.billing.ru/
-  desc:
-  level: Серебряный партнер
-  logo: img/partners/peterservice-01.png
+# - title: DINO Systems
+#   link: http://www.dins.ru/
+#   desc:
+#   level: Бронзовый партнер
+#   logo: img/partners/dins-02.png
 
 - title: Piter United
   link: http://piter-united.ru/main.html
