--- a/_data/itgm9_programms.yml
+++ b/_data/itgm9_programms.yml
@@ -71,25 +71,41 @@
   logo: img/programs/clock_13_00.png
 
 - id: Program10
-  title: Развлекательная программа
-  text: Своя Игра, Гонки по печати на клавиатуре, подведение итогов хакатона
-  time: "15:00 - 17:00"
-  duration: 2 часа
+  title: Блиц-доклады в 4 потока (7-ая секция)
+  text: Выступление участников сообществ в формате блиц-докладов, с последующим перемещением желающих на общение, по заявленной в докладе теме, на островках
+  time: "15:00 - 15:30"
+  duration: 20 минут + 10 минут
+  place: четыре зала
+  logo: img/programs/clock_13_00.png
+
+- id: Program11
+  title: Перерыв и время для общения
+  text: Нетворкинг и общение с коллегами по цеху
+  time: "15:30 - 16:00"
+  duration: 30 минут
   place: все помещения
   logo: img/programs/clock_17_00.png
 
-- id: Program11
-  title: Закрытие
-  text: Официальное закрытие мероприятия
-  time: "17:00 - 17:30"
-  duration: 30 минут
-  place: главный зал
+- id: Program12
+  title: Выступления на островках сообществ
+  text: Каждое сообщество готовит свою программу
+  time: "16:00 - 17:00"
+  duration: 50 минут + 10 минут перерыв
+  place: все залы
   logo: img/programs/clock_17_00.png
 
-- id: Program12
-  title: Хакатон
-  text: Уточняется
-  time: "11:30 - 15:00"
-  duration: 1 час
+- id: Program13
+  title: Выступления на островках сообществ
+  text: Каждое сообщество готовит свою программу
+  time: "17:00 - 18:00"
+  duration: 50 минут + 10 минут перерыв
+  place: все залы
+  logo: img/programs/clock_13_00.png
+
+- id: Program14
+  title: Закрытие мероприятия
+  text: Закрытие мероприятия
+  time: "18:00 - 18:30"
+  duration: 30 минут
   place: главный зал
   logo: img/programs/clock_13_00.png
