partners fora and bipulse

--- a/_data/itgm9_infopartners.yml
+++ b/_data/itgm9_infopartners.yml
@@ -53,10 +53,10 @@
 #   desc:
 #   logo: img/infopartners/LC_logo.png
 
-# - title: BIPULSE
-#   link: http://bipulse.ru/
-#   desc:
-#   logo: img/infopartners/bipulse.png
+- title: BIPULSE
+  link: http://bipulse.ru/
+  desc:
+  logo: img/infopartners/bipulse.png
 
 #- title: DataArt
 #  link: http://www.dataart.ru/
