--- a/_data/itgm9_sponsors.yml
+++ b/_data/itgm9_sponsors.yml
@@ -35,6 +35,12 @@
   level: Серебряный партнер
   logo: img/partners/tsystems.png
 
+- title: Fora-Soft
+  link: http://www.forasoft.com
+  desc:
+  level: Серебряный партнер
+  logo: img/partners/forasoft.png
+
 # - title: DINO Systems
 #   link: http://www.dins.ru/
 #   desc:
