--- a/_data/itgm9_sponsors.yml
+++ b/_data/itgm9_sponsors.yml
@@ -41,6 +41,12 @@
   level: Серебряный партнер
   logo: img/partners/forasoft.png
 
+- title: Return on Intelligence
+  link: http://www.returnonintelligence.com/
+  desc:
+  level: Серебряный партнер
+  logo: img/partners/return_on_intelligence.png
+
 # - title: DINO Systems
 #   link: http://www.dins.ru/
 #   desc:
