update IT Coaches SPB

--- a/_data/itgm9_communities.yml
+++ b/_data/itgm9_communities.yml
@@ -66,7 +66,7 @@
 #  id: 16
 #  link: http://www.meetup.com/St-Petersburg-Jenkins-Meetup/
 
-- title: ИТ-тренера
+- title: "IT Coaches SPB"
   id: 16
   link:  https://www.facebook.com/spbcoach/
 
