add itgm#9 photos album

--- a/_data/itgm_list.yml
+++ b/_data/itgm_list.yml
@@ -1,3 +1,5 @@
+- name: "itgm#9"
+  link: "https://vk.com/album-71691819_239436486"
 - name: "itgm#8"
   link: "https://vk.com/album-71691819_234767500"
 - name: "itgm#7"
