add partner sprintbox

--- a/_data/itgm10_infopartners.yml
+++ b/_data/itgm10_infopartners.yml
@@ -34,7 +34,7 @@
 #   logo: img/infopartners/logo_LXF.png
 
 # - title: Первый городской бизнес-инкубатор
-#   link: http://start-business.ru/
+#   link: http://start-business.ru/`
 #   desc:
 #   logo: img/infopartners/first-bisnes-incubator.jpg
 
