--- a/_data/itgm10_sponsors.yml
+++ b/_data/itgm10_sponsors.yml
@@ -33,3 +33,7 @@ infopartners:
   - title: Айти-Событие.рф
     link: http://it-events.com
     logo: img/it-sob-logo.png
+
+  - title: Нетология
+    link: http://netology.ru/
+    logo: img/netologiya.png
