fix program, community list

--- a/_data/itgm10_communities.yml
+++ b/_data/itgm10_communities.yml
@@ -22,7 +22,7 @@
   id: 6
   link: http://piterjs.org
 
-- title: SpbDotNet Community
+- title: SPb .Net Community
   id: 7
   link: https://plus.google.com/u/0/communities/115643868183582812348
 
@@ -38,7 +38,7 @@
   id: 10
   link: "http://groups.google.com/forum/#!forum/golang-ru"
 
-- title: SPb TechWriters
+- title: SPb Technical Writers
   id: 11
   link: https://plus.google.com/u/0/communities/111110772662436773783
 
@@ -80,7 +80,7 @@
 
 - title: SPb IT HR
   id: 17
-  link: 
+  link: /itgm10
 
 # - title: IT talk
 #   id: 3
