fix logo and name for t-systems

--- a/_data/itgm10_sponsors.yml
+++ b/_data/itgm10_sponsors.yml
@@ -16,9 +16,9 @@ silver:
     link: https://forasoft.com/ru/
     logo: img/forasoft-logo.png
 
-  - title: T-System
+  - title: T-Systems
     link: http://www.t-systems.ru
-    logo: img/T-Systems_Logo.png
+    logo: img/T-Systems.png
 
 bronse:
   - title: Sprintbox
